Update description for Xia Chen's profile

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Xia Chen"
 title_separator          : "-"
 name                     : &name "Xia Chen"
-description              : &description "PhD Candidate/Research Affiliate at Leibniz University Hannover, Germany"
+description              : &description "Postdoctoral Researcher at Technical University Munich, Germany"
 url                      : https://chenxiachan.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "chenxiachan.github.io"
