--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Xia Chen"
   avatar           : "profile.png"
-  bio              : "PhD Candidate/Research Affiliate at Leibniz University Hannover, Germany</a>"
+  bio              : "Postdoctoral Researcher at Technical University Munich, Germany</a>"
   location         : "Berlin, Germany"
   employer         :
   pubmed           : 
